# Ping-pong

./: CMakeLists.txt  Ping-pong.sln  Readme.md
Ping-pong/: Ball.cpp  Ball.h  Client.cpp  Client.h  Constants.h  NetClient.cpp  NetClient.h  Ping-pong.vcxproj  Ping-pong.vcxproj.filters  PingPong.cpp  PingPong.h  Player.cpp  Player.h  Server.cpp  Server.h  main.cpp
src/: CMakeLists.txt
src/cpp/: Client.cpp  Server.cpp  main.cpp
src/hdr/: Ball.h  Client.h  Constants.h  NetClient.h  Player.h  PongObserver.h  Server.h
